--- a/GolfGame/GolfGame/GolfGame.vcxproj.filters
+++ b/GolfGame/GolfGame/GolfGame.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="deck.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="player.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
