--- a/GolfGame/GolfGame/GolfGame.vcxproj.filters
+++ b/GolfGame/GolfGame/GolfGame.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClCompile Include="card.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="deck.cpp">
+    <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="player.cpp">
+    <ClCompile Include="table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,10 +32,10 @@
     <ClInclude Include="card.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="deck.hpp">
+    <ClInclude Include="player.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="player.hpp">
+    <ClInclude Include="table.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
