--- a/GolfGame/GolfGame/GolfGame.vcxproj
+++ b/GolfGame/GolfGame/GolfGame.vcxproj
@@ -147,13 +147,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="card.cpp" />
-    <ClCompile Include="deck.cpp" />
+    <ClCompile Include="table.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="card.hpp" />
-    <ClInclude Include="deck.hpp" />
+    <ClInclude Include="table.hpp" />
     <ClInclude Include="player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
